# QuantaEngine

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_EXECUTION_PLAN.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt
.github/ISSUE_TEMPLATE/: law_variation_experiment.md  physics_module.md  validation_benchmark.md
.github/workflows/: tests.yml
docs/: IMPLEMENTATION_INDEX.md  MVP_COMPLETION.md  architecture.md  physics_model.md  references.md  roadmap.md
docs/design/: ADVERSARIAL_COSMOGENESIS.md  DEPRECATION.md  PHYSICS_CALIBRATION.md  geant4_style_architecture.md  module_api_contracts.md
docs/experiments/: flagship_experiment_from_quanta_to_civilization.md
docs/implementation/: law_variation_protocol.md  master_execution_checklist.md  physics_scale_roadmap.md
docs/reviews/: 2026-06-21-codebase-remediation.md  2026-06-21b-codebase-assessment.md  2026-06-21b-codebase-remediation.md  README.md  index.yaml
docs/validation/: evidence_and_acceptance.md
examples/: minimal_lawbook.yaml  minimal_universe.yaml  run_arena.py  scan_constants.yaml
plans/: 2026-06-21-ADVERSARIAL_SELF_PLAY_IMPLEMENTATION.md  2026-06-21-GENESIS_ARENA_V2_PARALLEL_ADVERSARIAL.md  README.md
plans/codebase-remediation-2026-06-21/: EXECUTION_REPORT.md  ITERATION_GUIDE.md  (+3 more)
scripts/: parameter_scan.py  quickstart.py
tests/: test_arena.py  test_cosmogenesis.py  test_cosmology.py  test_engine.py  test_genesis_arena.py  test_laws.py  test_params.py  test_physics_invariants.py  test_plan_bundle.py  test_remediation.py  test_remediation_b.py
theories/: registry.yaml
(+80 files in other folders)
